--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ streamlit>=1.28.0
 
 # Utilities
 numpy>=1.24.0
+scipy>=1.10.0
 pandas>=2.0.0
 pydantic>=2.0.0
 python-dotenv>=1.0.0
@@ -43,4 +44,3 @@ pytest-cov>=4.1.0
 
 # Logging
 loguru>=0.7.0
-
