--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ requests>=2.31.0
 # Table processing
 table-transformer>=0.1.0
 transformers>=4.30.0
+timm>=0.9.0
 
 # Web framework
 fastapi>=0.104.0
